# poc-pipeline-aws

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  delete_local_tf_states.sh  docker-compose.yml  pyproject.toml
data/answers/: answers.jsonl
infra/: ecr.tf  ecs.tf  iam.tf  logs.tf  networking.tf  provider.tf  rds.tf  s3.tf  secrets.tf  terraform.tfvars  variables.tf
scripts/: deploy.sh  destroy.sh  run_ecs_task.sh  run_process.sh
src/: __init__.py  constants.py  helpers.py  main.py  queries.py
terraform/: iam.tf  networking.tf  provider.tf  rds.tf  terraform.tfvars  variables.tf
